<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/calibrate"
              android:title="@string/ocv_action_calibrate"
              app:showAsAction="ifRoom|withText" />
        <item android:id="@+id/preview_mode"
              android:title="@string/ocv_preview_mode">
              <menu>
                  <group android:checkableBehavior="single">
                      <item android:id="@+id/calibration"
                            android:title="@string/ocv_calibration"
                            android:checked="true" />
                      <item android:id="@+id/undistortion"
                            android:title="@string/ocv_undistortion" />
                      <item android:id="@+id/comparison"
                            android:title="@string/ocv_comparison" />
                  </group>
              </menu>
        </item>
    </group>
</menu>
